# Pascal-recursive-descent-parser

./: CMakeLists.txt  Program.txt  README.md  Readme.docx  Source.cpp  readme.md
Document/: Thumbs.db
IO/input/: program.pas  regular_expression.txt
IO/output/: postfix_regular_expression.txt  tokens.txt  tree.html
headers/: lex_analyser.hpp  parser.hpp  state.hpp  token.hpp  tree_node.hpp
sources/: lex_analyser.cpp  main.cpp  parser.cpp  state.cpp  token.cpp  tree_node.cpp
